--- a/src/exercise1/start/FlagFacts/MainPage.xaml
+++ b/src/exercise1/start/FlagFacts/MainPage.xaml
@@ -9,9 +9,9 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Previous"
                      Clicked="OnPrevious" Icon="ic_arrow_drop_up_black.png" />
-        <ToolbarItem Text="Next" 
+        <ToolbarItem Text="Next"
                      Clicked="OnNext" Icon="ic_arrow_drop_down_black.png" />
-        <ToolbarItem Text="Show" 
+        <ToolbarItem Text="Show"
                      Clicked="OnShow" Icon="ic_action_search.png" />
     </ContentPage.ToolbarItems>
 
@@ -25,21 +25,21 @@
                 </OnPlatform>
             </StackLayout.Padding>
 
-            <Image x:Name="flagImage" HeightRequest="200" 
+            <Image x:Name="flagImage" HeightRequest="200"
                     HorizontalOptions="Center"
                     VerticalOptions="Center"
                     Aspect="AspectFit" />
 
-            <Picker x:Name="country" />
+            <Picker x:Name="country" SelectedItem="{Binding Country}" />
 
             <Label Text="Current Design was Adopted on" FontAttributes="Bold" />
-            <DatePicker x:Name="adopted" MinimumDate="01/01/1700" HorizontalOptions="Start" />
+            <DatePicker x:Name="adopted" MinimumDate="01/01/1700" HorizontalOptions="Start" Date="{Binding DateAdopted}" />
 
             <Label Text="Has Shield" FontAttributes="Bold" />
-            <Switch x:Name="hasShield" />
+            <Switch x:Name="hasShield" IsToggled="{Binding IncludesShield}" />
 
             <Label Text="Fun Fact" FontAttributes="Bold" />
-            <Label x:Name="description" />
+            <Label x:Name="description" Text="{Binding Description}" />
 
             <Label x:Name="moreInfo" Text="More Information" Margin="0,0,10,0"
                     TextColor="Blue" HorizontalOptions="End">
