--- a/src/exercise3/start/FlagFacts/MainPage.xaml
+++ b/src/exercise3/start/FlagFacts/MainPage.xaml
@@ -3,15 +3,25 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FlagFacts"
              xmlns:eff="clr-namespace:FlagFacts.Effects"
+             xmlns:cvt="clr-namespace:FlagFacts.Converters"
+             xmlns:data="clr-namespace:FlagData;assembly=FlagData"
              x:Class="FlagFacts.MainPage"
              Title="Fun with Flags">
+
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <cvt:EmbeddedImageConverter x:Key="irConverter"
+                    ResolvingAssemblyType="{x:Type data:Flag}" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Previous"
                      Clicked="OnPrevious" Icon="ic_arrow_drop_up_black.png" />
-        <ToolbarItem Text="Next" 
+        <ToolbarItem Text="Next"
                      Clicked="OnNext" Icon="ic_arrow_drop_down_black.png" />
-        <ToolbarItem Text="Show" 
+        <ToolbarItem Text="Show"
                      Clicked="OnShow" Icon="ic_action_search.png" />
     </ContentPage.ToolbarItems>
 
@@ -25,7 +35,8 @@
                 </OnPlatform>
             </StackLayout.Padding>
 
-            <Image x:Name="flagImage" HeightRequest="200" 
+            <Image x:Name="flagImage" HeightRequest="200"
+                    Source="{Binding ImageUrl, Mode=OneWay, Converter={StaticResource irConverter}}"
                     HorizontalOptions="Center"
                     VerticalOptions="Center"
                     Aspect="AspectFit" />
@@ -33,7 +44,7 @@
             <Picker x:Name="country" SelectedItem="{Binding Country}" />
 
             <Label Text="Current Design was Adopted on" FontAttributes="Bold" />
-            <DatePicker x:Name="adopted" MinimumDate="01/01/1700" HorizontalOptions="Start" 
+            <DatePicker x:Name="adopted" MinimumDate="01/01/1700" HorizontalOptions="Start"
                         Date="{Binding DateAdopted}" />
 
             <Label Text="Has Shield" FontAttributes="Bold" />
